<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="es.studium.davinciapp.ui.home.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_pintor"
        android:name="es.studium.davinciapp.ui.painter.PainterFragment"
        android:label="@string/menu_pintor"
        tools:layout="@layout/fragment_painter" />

    <fragment
        android:id="@+id/nav_sculptures"
        android:name="es.studium.davinciapp.ui.sculptures.SculpturesFragment"
        android:label="@string/menu_escultura"
        tools:layout="@layout/fragment_sculptures" />

    <fragment
        android:id="@+id/nav_cientifico"
        android:name="es.studium.davinciapp.ui.scientist.ScientistFragment"
        android:label="@string/menu_cientifico"
        tools:layout="@layout/fragment_scientist" />

    <fragment
        android:id="@+id/nav_inventor"
        android:name="es.studium.davinciapp.ui.inventor.InventorFragment"
        android:label="@string/menu_inventor"
        tools:layout="@layout/fragment_inventor" />
</navigation>